swarm tag is added to docker task because of dependency on docker_info

--- a/infrastructure/server-setup/playbook.yml
+++ b/infrastructure/server-setup/playbook.yml
@@ -67,8 +67,10 @@
         apply:
           tags:
             - docker
+            - swarm
       tags:
         - docker
+        - swarm 
 
     - include_tasks:
         file: tasks/deployment-user.yml
