--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "snapshot": "bash infrastructure/backups/backup.sh",
     "port-forward": "bash infrastructure/port-forward.sh",
     "sort-translations": "ts-node -r tsconfig-paths/register src/sort-translations.ts",
-    "environment:init": "ts-node infrastructure/environments/setup-environment.ts"
+    "environment:init": "ts-node infrastructure/environments/setup-environment.ts",
+    "translate-csv": "bash translate-csv.sh"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.1.1",
@@ -68,6 +69,7 @@
     "lint-staged": "^7.1.0",
     "node-ssh": "^13.2.0",
     "nodemon": "^2.0.22",
+    "openai": "^4.96.2",
     "pino-pretty": "^11.0.0",
     "prettier": "^2.8.8",
     "react-intl": "^6.4.3",
@@ -96,7 +98,8 @@
     "country-data": "^0.0.31",
     "cross-env": "^6.0.3",
     "csv-stringify": "^6.4.6",
-    "csv2json": "^1.4.2",
+    "csv-writer": "^1.6.0",
+    "csv2json": "^2.0.2",
     "cypress": "13.5.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.4.5",
