chore: add missing environment variables for mosip-api

--- a/infrastructure/docker-compose.deploy.yml
+++ b/infrastructure/docker-compose.deploy.yml
@@ -1074,6 +1074,8 @@ services:
       - MOSIP_AUTH_CLIENT_APP_ID=${MOSIP_AUTH_CLIENT_APP_ID}
       - MOSIP_PACKET_AUTH_CLIENT_ID=${MOSIP_PACKET_AUTH_CLIENT_ID}
       - MOSIP_PACKET_AUTH_CLIENT_SECRET=${MOSIP_PACKET_AUTH_CLIENT_SECRET}
+      - MOSIP_WEBSUB_AUTH_CLIENT_ID=${MOSIP_WEBSUB_AUTH_CLIENT_ID}
+      - MOSIP_WEBSUB_AUTH_CLIENT_SECRET=${MOSIP_WEBSUB_AUTH_CLIENT_SECRET}
       - MOSIP_WEBSUB_CALLBACK_URL=http://mosip-api:2024/websub/callback
       - MOSIP_WEBSUB_HUB_URL=${MOSIP_WEBSUB_HUB_URL}
       - MOSIP_WEBSUB_SECRET=${MOSIP_WEBSUB_SECRET}
