--- a/.github/workflows/create-hetzner-server.yml
+++ b/.github/workflows/create-hetzner-server.yml
@@ -24,6 +24,7 @@ on:
           description: Select group tag you want to execute
           required: true
 env:
+  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   TF_PATH: infrastructure/provision-server/hetzner-cloud-empty-server
   TF_VAR_hcloud_token: ${{ secrets.HCLOUD_TOKEN }}
   TF_VAR_country_name: ${{ vars.COUNTRY_NAME }}
@@ -31,42 +32,53 @@ env:
   TF_VAR_env_type: ${{ github.event.inputs.env_type }}
   TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   TF_VAR_cloudflare_zone_id: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-
+  TERRAFORM_REPO: opencrvs/terraform-state
 jobs:
   create-environment:
     name: Create New HCloud Environment
     runs-on: ubuntu-24.04
-    continue-on-error: true
     outputs:
       ssh_host: ${{ steps.output.outputs.ssh_host }}
       hostname: ${{ steps.output.outputs.hostname }}
     environment: ${{ github.event.inputs.env_name }}
     steps:
-      - name: Checkout repo
+      - name: Checkout repo ${{ github.repository }}
         uses: actions/checkout@v4
+        with:
+          # Token permissions:  read:org, read:public_key, repo, workflow
+          token: ${{ secrets.GH_TOKEN }}
+      - name: Configure git client for ${{ github.repository }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Checkout repo ${{ env.TERRAFORM_REPO }}
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.TERRAFORM_REPO }}
+          ref: main
+          token: ${{ secrets.GH_TOKEN }}
+          path: terraform-state
+      - name: Configure git client for ${{ env.TERRAFORM_REPO }}
+        working-directory: terraform-state/
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
       - name: Pull SSH key pair files from github
         run: |
           ssh_key_path=$TF_PATH/.ssh
           mkdir -p $ssh_key_path
-
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > $ssh_key_path/id_rsa
           echo "${{ secrets.SSH_PUBLIC_KEY }}" > $ssh_key_path/id_rsa.pub
           chmod 600 $ssh_key_path/id_rsa
           chmod 644 $ssh_key_path/id_rsa.pub
-      - name: Checkout terraform state repo
-        uses: actions/checkout@v4
-        with:
-          repository: opencrvs/terraform-state
-          ref: main
-          path: terraform-state
-        
+
       - name: Restore terraform state
         run: |
           mkdir -p terraform-state/${{ vars.COUNTRY_NAME }}
           [ -f terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate ] && \
           cp terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate ${{ env.TF_PATH }}/terraform.tfstate || \
           echo "Terraform state file not found. Creating a new one."
-  
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
@@ -77,80 +89,118 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        id: apply
         working-directory: ${{ env.TF_PATH }}
         run: |
           terraform apply -auto-approve -input=false
-
-      - run: |
+      - name: Store variables from terraform state file
+        id: output
+        working-directory: ${{ env.TF_PATH }}
+        run: |
+          # TODO: Add configuration for multi-node
+          if [ ${{ inputs.env_type }} == 'single-node' ]
+          then
+            echo "ssh_host=$(terraform output -raw public_ip)" >> $GITHUB_OUTPUT
+            echo "hostname=$TF_VAR_country_name-$TF_VAR_env_name" >> $GITHUB_OUTPUT
+          fi
+  
+      - name: Update terraform state file in ${{ env.TERRAFORM_REPO }}
+        run: |
           cp ${{ env.TF_PATH }}/terraform.tfstate terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate
           cd terraform-state/
-          git add ${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate
-          git commit -m "Add environment file for ${{ github.event.inputs.env_name }} env with type ${{ inputs.env_type }}"
+          if [[ -n "$(git status --porcelain)" ]]; then
+            git add ${{ vars.COUNTRY_NAME }}/${{ inputs.env_name }}-${{ inputs.env_type }}.tfstate
+            git commit -m "Add environment file for ${{ github.event.inputs.env_name }} env with type ${{ inputs.env_type }}"
+            git push
+          else
+            echo "No changes to commit"
+          fi
+
+      - name: Create environment file for ansible
+        env:
+          SSH_HOST: ${{ steps.output.outputs.ssh_host }}
+          HOSTNAME: ${{ steps.output.outputs.hostname }}
+          # TODO: Fix hardcoded domain
+        run: |
+          [ ! -f infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml ] && \
+          (cat infrastructure/provision-server/templates/single-node-ansible-env.yml | \
+          sed -e "s#HOSTNAME#$HOSTNAME#" \
+              -e "s#SSH_HOST#$SSH_HOST#" \
+              > infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml && \
+          echo "Environment file created: infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml") || \
+          echo "infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml already exists"
+      - name: Create docker compose
+        run: |
+          [ ! -f infrastructure/docker-compose.${{ github.event.inputs.env_name }}-deploy.yml ] && \
+          cp infrastructure/provision-server/templates/docker-compose.single-node.yml infrastructure/docker-compose.${{ github.event.inputs.env_name }}-deploy.yml && \
+          echo "Docker-compose created" || \
+          echo "Docker-compose already exists"
+
+      - name: Update workflows
+        run: |
+          workflows=(
+            ".github/workflows/provision.yml"
+            ".github/workflows/deploy.yml"
+            ".github/workflows/seed-data.yml"
+          )
+          path=".on.workflow_dispatch.inputs.environment.options"
+
+          # Check if option already exists in first workflows file
+          if ! yq e "$path" "$workflows" | grep -qc "${{ github.event.inputs.env_name }}"; then
+            echo "Adding new option '${{ github.event.inputs.env_name }}' to workflows: ${workflows[@]}"
+            for workflow in ${workflows[@]}
+            do
+              yq e "$path += [\"${{ github.event.inputs.env_name }}\"]" -i "$workflow"
+              echo "Updated workflow $workflow"
+            done
+          else
+            echo "Option '${{ github.event.inputs.env_name }}' already exists in workflows ${workflows[@]}"
+          fi
+
+      - env:
+          SSH_HOST: ${{ steps.output.outputs.ssh_host }}
+          HOSTNAME: ${{ steps.output.outputs.hostname }}
+          DOMAIN: ${{ github.event.inputs.env_name }}.opencrvs.dev
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        name: Create environment variables and secrets on GitHub
+        run: |
+          cat infrastructure/provision-server/templates/environment.variables.tpl | \
+          sed -e "s/#SSH_HOST#/$SSH_HOST/" \
+              -e "s/#DOMAIN#/$DOMAIN/" \
+              > infrastructure/environment.variables
+          echo "Environment variables file created: infrastructure/environment.variables"
+          while read line; do
+            if [[ $line == *"="* ]]; then
+              key=$(echo "$line" | cut -d '=' -f 1)
+              value=$(echo "$line" | cut -d '=' -f 2-)
+              echo "Adding variable: $key"
+              gh variable set --env ${{ github.event.inputs.env_name }} $key --body "$value"
+            fi
+          done < infrastructure/environment.variables
+          while read line; do
+            if [[ $line == *"="* ]]; then
+              key=$(echo "$line" | cut -d '=' -f 1)
+              value=$(echo "$line" | cut -d '=' -f 2-)
+              echo "Adding secret with value: $key"
+              gh secret set $key --env ${{ github.event.inputs.env_name }} --body "$value"
+            else
+              key=$line
+              password=`openssl rand -base64 25 | tr -cd '[:alnum:]._-' ; echo ''`
+              echo "Adding secret: $key"
+              gh secret set $key --env ${{ github.event.inputs.env_name }} --body "$password"
+            fi
+          done < infrastructure/provision-server/templates/environment.secrets.tpl
+          gh secret set SSH_KEY --env ${{ github.event.inputs.env_name }} < $TF_PATH/.ssh/id_rsa || echo "Failed"
+      - name: Update known-hosts
+        run: |
+          echo "Wait few seconds for server to be available" && sleep 10
+          bash ./infrastructure/environments/update-known-hosts.sh ${{ steps.output.outputs.ssh_host }} 22
+  
+      - name: Commit and push changes to ${{ github.repository }}
+        run: |
+          git add infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml \
+                  infrastructure/known-hosts \
+                  .github \
+                  infrastructure/docker-compose.${{ github.event.inputs.env_name }}-deploy.yml
+          git status
+          git commit -m "Add environment file for ${{ github.event.inputs.env_name }}"
           git push
-
-      # - name: Store variables
-      #   id: output
-      #   working-directory: ${{ env.TF_PATH }}
-      #   run: |
-      #     echo "ssh_host=$(terraform output -raw public_ip)" >> $GITHUB_OUTPUT
-      #     echo "hostname=$TF_VAR_country_name-$TF_VAR_env_name" >> $GITHUB_OUTPUT
-      # # FIXME: We can upload artifact, but it useless for us
-      # - name: Upload Terraform state
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: terraform-state
-      #     path: ${{ env.TF_PATH }}/terraform.tfstate
-      # - name: Setup Git
-      #   run: |
-      #     git config --local user.name "OpenCRVS Bot"
-      #     git config --local user.email "bot@opencrvs.org"
-      # - name: Create environment file
-      #   env:
-      #     SSH_HOST: ${{ steps.output.outputs.ssh_host }}
-      #     HOSTNAME: ${{ steps.output.outputs.hostname }}
-      #     # TODO: Fix hardcoded domain
-      #     DOMAIN: ${{ github.event.inputs.env_name }}.opencrvs.dev
-      #   run: |
-      #     mkdir -p infrastructure/server-setup/inventory
-      #     cat infrastructure/provision-server/templates/staging-env.yml | \
-      #     sed -e "s#HOSTNAME#$HOSTNAME#" \
-      #         -e "s#SSH_HOST#$SSH_HOST#" \
-      #         > infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml
-      #     echo "Environment file created: infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml"
-      # # - name: Update known_hosts
-      # #     ssh-keyscan -H "$SSH_HOST" >> infrastructure/known-hosts || echo "Failed to add $SSH_HOST to known_hosts"
-
-      # - env:
-      #     SSH_HOST: ${{ steps.output.outputs.ssh_host }}
-      #     HOSTNAME: ${{ steps.output.outputs.hostname }}
-      #     # TODO: Fix hardcoded domain
-      #     DOMAIN: ${{ github.event.inputs.env_name }}.opencrvs.dev
-      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      #   run: |
-      #     cat infrastructure/provision-server/templates/environment.variables.tpl | \
-      #     sed -e "s/#SSH_HOST#/$SSH_HOST/" \
-      #         -e "s/#DOMAIN#/$DOMAIN/" \
-      #         > infrastructure/environment.variables
-      #     echo "Environment variables file created: infrastructure/environment.variables"
-      #     while read line; do
-      #       if [[ $line == *"="* ]]; then
-      #         key=$(echo "$line" | cut -d '=' -f 1)
-      #         value=$(echo "$line" | cut -d '=' -f 2-)
-      #         echo "Adding variable: $key"
-      #         gh variable set --env ${{ github.event.inputs.env_name }} $key --body "$value"
-      #       fi
-      #     done < infrastructure/environment.variables
-      #     while read key; do
-      #       password=`openssl rand -base64 25 | tr -cd '[:alnum:]._-' ; echo ''`
-      #       echo "Adding secret: $key"
-      #       gh secret set $key --env ${{ github.event.inputs.env_name }} --body "$password"
-      #     done < infrastructure/provision-server/templates/environment.secrets.tpl
-      # - name: Commit and push changes
-      #   run: |
-      #     mkdir -p infrastructure/server-setup/tfstate
-      #     cp ${{ env.TF_PATH }}/terraform.tfstate infrastructure/server-setup/tfstate/${{ github.event.inputs.env_name }}.tfstate
-      #     git add infrastructure/server-setup/inventory/${{ github.event.inputs.env_name }}.yml \
-      #             infrastructure/known-hosts
-      #     git commit -m "Add environment file for ${{ github.event.inputs.env_name }}"
-      #     git push
