--- a/infrastructure/server-setup/tasks/deployment-user.yml
+++ b/infrastructure/server-setup/tasks/deployment-user.yml
@@ -7,12 +7,8 @@
     name: docker
     state: present
 
-- name: Get the current logged in user
-  set_fact:
-    current_user: "{{ lookup('env', 'USER') }}"
-
 - name: Add user to Docker group
   user:
-    name: '{{ current_user }}'
+    name: '{{ ansible_user }}'
     groups: docker
     append: yes
