--- a/.github/workflows/destroy-hetzner-server.yml
+++ b/.github/workflows/destroy-hetzner-server.yml
@@ -1,36 +1,26 @@
-name: Create Hetzner Server
-run-name: Create server for ${{ inputs.environment }} environment
+name: Destroy Hetzner Server
+run-name: Destroy server for ${{ github.event.inputs.environment }} environment
 on:
     workflow_dispatch:
       inputs:
         environment:
           description: "Short server name (3–5 letters)"
           required: true
-        type:
-          description: "Environment type (single or multi node)"
-          required: false
-          type: choice
-          default: 'single-node'
-          options:
-            - single-node
-            - multi-node
     workflow_call:
       inputs:
         environment:
           type: string
           description: Environment to deploy to
           required: true
-        type:
-          type: string
-          description: Select group tag you want to execute
-          default: 'single-node'
+
 env:
   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   TF_PATH: infrastructure/provision-server/hetzner-cloud-empty-server
   TF_VAR_hcloud_token: ${{ secrets.HCLOUD_TOKEN }}
   TF_VAR_country_name: ${{ vars.COUNTRY_NAME }}
-  TF_VAR_env_name: ${{ inputs.environment }}
-  TF_VAR_env_type: "${{ inputs.type || 'single-node' }}"
+  TF_VAR_env_name: ${{ github.event.inputs.environment }}
+  # FIXME: Add multi-node support
+  TF_VAR_env_type: "single-node"
   TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   TF_VAR_cloudflare_zone_id: ${{ secrets.CLOUDFLARE_ZONE_ID }}
   TERRAFORM_REPO: opencrvs/terraform-state
@@ -38,9 +28,12 @@ env:
   type: single-node
 jobs:
   create-environment:
-    name: Create New HCloud Environment
+    name: Destroy HCloud Environment
     runs-on: ubuntu-24.04
-    environment: ${{ inputs.environment }}
+    outputs:
+      ssh_host: ${{ steps.output.outputs.ssh_host }}
+      hostname: ${{ steps.output.outputs.hostname }}
+    environment: ${{ github.event.inputs.environment }}
     steps:
       - name: Checkout repo ${{ github.repository }}
         uses: actions/checkout@v4
@@ -75,8 +68,8 @@ jobs:
       - name: Restore terraform state
         run: |
           mkdir -p terraform-state/${{ vars.COUNTRY_NAME }}
-          [ -f terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ env.type }}.tfstate ] && \
-          cp terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ env.type }}.tfstate ${{ env.TF_PATH }}/terraform.tfstate || \
+          [ -f terraform-state/${{ vars.COUNTRY_NAME }}/${{ github.event.inputs.environment }}-${{ env.type }}.tfstate ] && \
+          cp terraform-state/${{ vars.COUNTRY_NAME }}/${{ github.event.inputs.environment }}-${{ env.type }}.tfstate ${{ env.TF_PATH }}/terraform.tfstate || \
           echo "Terraform state file not found. Creating a new one."
 
       - name: Setup Terraform
@@ -91,47 +84,33 @@ jobs:
       - name: Terraform Apply
         working-directory: ${{ env.TF_PATH }}
         run: |
-          terraform apply -auto-approve -input=false
-      - name: Store variables from terraform state file
-        id: output
-        working-directory: ${{ env.TF_PATH }}
+          terraform destroy -auto-approve -input=false
+
+      - name: Remove terraform state file in ${{ env.TERRAFORM_REPO }}
         run: |
-          # TODO: Add configuration for multi-node
-          echo "type=${{ env.type }}"
-          if [ ${{ env.type }} == 'single-node' ]
-          then
-            echo "ssh_host=$(terraform output -raw public_ip)" >> $GITHUB_OUTPUT
-            echo "hostname=$TF_VAR_country_name-$TF_VAR_env_name" >> $GITHUB_OUTPUT
-          fi
-  
-      - name: Update terraform state file in ${{ env.TERRAFORM_REPO }}
-        run: |
-          cp ${{ env.TF_PATH }}/terraform.tfstate terraform-state/${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ env.type }}.tfstate
           cd terraform-state/
+          if [ -f ${{ vars.COUNTRY_NAME }}/${{ github.event.inputs.environment }}-${{ env.type }}.tfstate ]; then
+            git rm ${{ vars.COUNTRY_NAME }}/${{ github.event.inputs.environment }}-${{ env.type }}.tfstate
+          fi
           if [[ -n "$(git status --porcelain)" ]]; then
-            git add ${{ vars.COUNTRY_NAME }}/${{ inputs.environment }}-${{ env.type }}.tfstate
-            git commit -m "Add environment file for ${{ inputs.environment }} env with type ${{ env.type }}"
+            git commit -m "Add environment file for ${{ github.event.inputs.environment }} env with type ${{ env.type }}"
             git push
           else
             echo "No changes to commit"
           fi
 
-      - name: Create environment file for ansible
-        env:
-          SSH_HOST: ${{ steps.output.outputs.ssh_host }}
-          HOSTNAME: ${{ steps.output.outputs.hostname }}
+      - name: Remove environment file for ansible
         run: |
-          cat infrastructure/provision-server/templates/single-node-ansible-env.yml | \
-          sed -e "s#HOSTNAME#$HOSTNAME#" \
-              -e "s#SSH_HOST#$SSH_HOST#" \
-              > infrastructure/server-setup/inventory/${{ inputs.environment }}.yml && \
-          echo "Environment file created: infrastructure/server-setup/inventory/${{ inputs.environment }}.yml"
-      - name: Create docker compose
+          [ -f infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml ] && \
+          git rm infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml && \
+          echo "Environment file removed: infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml") || \
+          echo "infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml doesn't exist"
+      - name: Remove docker compose
         run: |
-          [ ! -f infrastructure/docker-compose.${{ inputs.environment }}-deploy.yml ] && \
-          cp infrastructure/provision-server/templates/docker-compose.single-node.yml infrastructure/docker-compose.${{ inputs.environment }}-deploy.yml && \
-          echo "Docker-compose created" || \
-          echo "Docker-compose already exists"
+          [ -f infrastructure/docker-compose.${{ github.event.inputs.environment }}-deploy.yml ] && \
+          git rm infrastructure/docker-compose.${{ github.event.inputs.environment }}-deploy.yml && \
+          echo "Docker-compose removed" || \
+          echo "Docker-compose doesn't exist"
 
       - name: Update workflows
         run: |
@@ -144,21 +123,21 @@ jobs:
           path=".on.workflow_dispatch.inputs.environment.options"
 
           # Check if option already exists in first workflows file
-          if ! yq e "$path" "$workflows" | grep -qc "${{ inputs.environment }}"; then
-            echo "Adding new option '${{ inputs.environment }}' to workflows: ${workflows[@]}"
+          if ! yq e "$path" "$workflows" | grep -qc "${{ github.event.inputs.environment }}"; then
+            echo "Adding new option '${{ github.event.inputs.environment }}' to workflows: ${workflows[@]}"
             for workflow in ${workflows[@]}
             do
-              yq e "$path += [\"${{ inputs.environment }}\"]" -i "$workflow"
+              yq e "$path += [\"${{ github.event.inputs.environment }}\"]" -i "$workflow"
               echo "Updated workflow $workflow"
             done
           else
-            echo "Option '${{ inputs.environment }}' already exists in workflows ${workflows[@]}"
+            echo "Option '${{ github.event.inputs.environment }}' already exists in workflows ${workflows[@]}"
           fi
 
       - env:
           SSH_HOST: ${{ steps.output.outputs.ssh_host }}
           HOSTNAME: ${{ steps.output.outputs.hostname }}
-          DOMAIN: ${{ inputs.environment }}.opencrvs.dev
+          DOMAIN: ${{ github.event.inputs.environment }}.opencrvs.dev
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         name: Create environment variables and secrets on GitHub
         run: |
@@ -172,7 +151,7 @@ jobs:
               key=$(echo "$line" | cut -d '=' -f 1)
               value=$(echo "$line" | cut -d '=' -f 2-)
               echo "Adding variable: $key"
-              gh variable set --env ${{ inputs.environment }} $key --body "$value"
+              gh variable set --env ${{ github.event.inputs.environment }} $key --body "$value"
             fi
           done < infrastructure/environment.variables
           while read line; do
@@ -180,15 +159,15 @@ jobs:
               key=$(echo "$line" | cut -d '=' -f 1)
               value=$(echo "$line" | cut -d '=' -f 2-)
               echo "Adding secret with value: $key"
-              gh secret set $key --env ${{ inputs.environment }} --body "$value"
+              gh secret set $key --env ${{ github.event.inputs.environment }} --body "$value"
             else
               key=$line
               password=`openssl rand -base64 25 | tr -cd '[:alnum:]._-' ; echo ''`
               echo "Adding secret: $key"
-              gh secret set $key --env ${{ inputs.environment }} --body "$password"
+              gh secret set $key --env ${{ github.event.inputs.environment }} --body "$password"
             fi
           done < infrastructure/provision-server/templates/environment.secrets.tpl
-          gh secret set SSH_KEY --env ${{ inputs.environment }} < $TF_PATH/.ssh/id_rsa || echo "Failed"
+          gh secret set SSH_KEY --env ${{ github.event.inputs.environment }} < $TF_PATH/.ssh/id_rsa || echo "Failed"
       - name: Update known-hosts
         env:
           SSH_HOST: ${{ steps.output.outputs.ssh_host }}
@@ -199,10 +178,10 @@ jobs:
   
       - name: Commit and push changes to ${{ github.repository }}
         run: |
-          git add infrastructure/server-setup/inventory/${{ inputs.environment }}.yml \
+          git add infrastructure/server-setup/inventory/${{ github.event.inputs.environment }}.yml \
                   infrastructure/known-hosts \
                   .github \
-                  infrastructure/docker-compose.${{ inputs.environment }}-deploy.yml
+                  infrastructure/docker-compose.${{ github.event.inputs.environment }}-deploy.yml
           git status
-          git commit -m "Add environment file for ${{ inputs.environment }}"
+          git commit -m "Add environment file for ${{ github.event.inputs.environment }}"
           git push
