--- a/.github/workflows/dummy-seed.yml
+++ b/.github/workflows/dummy-seed.yml
@@ -1,5 +1,5 @@
 name: Seed data
-run-name: Seed data to ${{ inputs.environment }} core=${{ inputs.core-image-tag }}
+run-name: Seed data to ${{ github.event.inputs.environment }} core=${{ github.event.inputs.core-image-tag }}
 on:
   workflow_call:
     inputs:
@@ -22,15 +22,26 @@ on:
           - staging
           - production
           - e2e
-          - v17
+          - v19
+          - release-v16
+          - tmpdev
+          - tmpqa
+          - tmpstg
+          - tmp-prod
+          - tmp1
+          - tmp2
       core-image-tag:
-        description: Core image tag
+        description: Core DockerHub image tag
         required: true
 jobs:
   test:
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-24.04
     steps:
         - name: Test variables
           run: |
-            echo "environment: ${{ github.event.inputs.environment }}"
-            echo "core tag: ${{ github.event.inputs.core-image-tag }}"
+            echo "environment: ${{ inputs.environment }}"
+            echo "core tag: ${{ inputs.core-image-tag }}"
+            echo ${{ secrets.SUPER_USER_PASSWORD }}
+            echo ${{ vars.ACTIVATE_USERS }}
+            echo "CUSTOM BRANCH: ${{ github.ref_name }}"
