--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -1,61 +1,84 @@
-name: Provision Release Environment
-run-name: Provision ${{ inputs.env_name }} release environment
+# How to use this workflow:
+##################################################################
+# Workflow should be triggered manually from release branch
+# environment: Name of the environment to create
+# core_image_tag: OpenCRVS core image tag
+# Country config will be provisioned from latest commit to release branch
+name: Release - Provision Environment
+run-name: "Provision ${{ inputs.environment }} release environment (core: ${{ inputs.core_image_tag }})"
 on:
     workflow_dispatch:
         inputs:
-            release_version:
-                description: "Release version to deploy in format vX.Y.Z"
+            environment:
+                description: "Environment, e/g v19 will create v19.opencrvs.dev"
                 required: true
             core_image_tag:
-                description: Core image tag (if empty it will be set to release_version)
-                required: false
-                type: string
-            countryconfig_image_tag:
-                description: Country config image tag (if empty it will be set to release_version)
-                required: false
-                type: string
-    workflow_call:
-        inputs:
-            env_name:
-                type: string
-                description: Environment to deploy to
+                description: "Core image tag"
                 required: true
-            core_image_tag:
-                description: Core image tag (if empty it will be set to release_version)
-                required: false
-                type: string
-            country_config_version:
-                description: Country config image tag (if empty it will be set to release_version)
-                required: false
                 type: string
 
 jobs:
-  create-server:
-    uses: ./.github/workflows/dummy-create-server.yml
-    with:
-      env_name: ${{ inputs.env_name }}
-    secrets: inherit
-
-  provision-server:
-    needs: create-server
-    uses: ./.github/workflows/dummy-provision.yml
-    with:
-      environment: ${{ inputs.env_name }}
-    secrets: inherit
-
-  deploy:
-    needs: provision-server
-    uses: ./.github/workflows/dummy-deploy.yml
-    with:
-      environment: ${{ inputs.env_name }}
-      core-image-tag: ${{ inputs.core_image_tag }}
-      countryconfig-image-tag: ${{ inputs.countryconfig_image_tag }}
-    secrets: inherit
-
-  seed-data:
-    needs: deploy
-    uses: ./.github/workflows/dummy-seed.yml
-    with:
-      environment: ${{ inputs.env_name }}
-      core-image-tag: ${{ inputs.core_image_tag }}
-    secrets: inherit
+    verify-branch:
+      environment: ${{ inputs.environment }}
+      runs-on: ubuntu-24.04
+      steps:
+      - name: Fail if not on release branch
+        # TODO: Before MERGE DON'T FORGET
+        # Delete condition: [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
+        run: |
+          echo "Current ref name: ${{ github.ref_name }} and ref: ${{ github.ref }}"
+          if [[ "${{ github.ref }}" != refs/heads/release/* ]] && [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
+          then
+              echo "❌ This workflow must be run from a release/* branch."
+              echo "Please check release documentation for more information: TODO: Add link to documentation"
+              exit 1
+          fi
+    create-server:
+      needs: verify-branch
+      # uses: ./.github/workflows/dummy-create-server.yml
+      uses: ./.github/workflows/create-hetzner-server.yml
+      with:
+        environment: ${{ inputs.environment }}
+      secrets: inherit
+      # steps.get_latest_commit.outputs.config_tag
+    provision-server:
+      needs: [verify-branch, create-server]
+      # uses: ./.github/workflows/dummy-provision.yml
+      uses: ./.github/workflows/provision.yml
+      with:
+        environment: ${{ inputs.environment }}
+      secrets: inherit
+    check-countryconfig:
+      runs-on: ubuntu-24.04
+      needs: [verify-branch, create-server]
+      environment: ${{ inputs.environment }}
+      outputs:
+        image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
+      steps:
+          - name: Checkout repo ${{ github.repository }}
+            uses: actions/checkout@v4
+          - name: Get latest commit SHA
+            id: get_latest_commit
+            run: |
+              git pull
+              git status
+              config_tag=$(git rev-parse HEAD | cut -c 1-7)
+              echo "Latest commit SHA: $config_tag"
+              echo "config_tag=$config_tag" >> $GITHUB_OUTPUT
+    deploy:
+      needs: [verify-branch, provision-server, check-countryconfig, create-server]
+      # uses: ./.github/workflows/dummy-deploy.yml
+      uses: ./.github/workflows/deploy.yml
+      with:
+        environment: ${{ inputs.environment }}
+        core-image-tag: ${{ inputs.core_image_tag }}
+        countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
+        reset: 'true'
+      secrets: inherit
+    # seed-data:
+    #   needs: [deploy, check-countryconfig]
+    #   uses: ./.github/workflows/dummy-seed.yml
+    #   # uses: ./.github/workflows/seed-data.yml
+    #   with:
+    #     environment: ${{ inputs.environment }}
+    #     core-image-tag: ${{ inputs.core_image_tag }}
