--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -1,6 +1,16 @@
 name: Provision environment
 run-name: Provision ${{ github.event.inputs.environment }}
 on:
+  workflow_call:
+    inputs:
+      environment:
+        type: string
+        description: Environment to deploy to
+        required: true
+      tag:
+        type: string
+        description: Environment to deploy to
+        default: all
   workflow_dispatch:
     inputs:
       environment:
@@ -17,6 +27,13 @@ on:
           - jump
           - e2e
           - v19
+          - release-v16
+          - tmpdev
+          - tmpqa
+          - tmpstg
+          - tmp-prod
+          - tmp1
+          - tmp2
       tag:
         type: choice
         description: Select group tag you want to execute
