--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -56,6 +56,7 @@ jobs:
               uses: ./.github/actions/run-workflow
               with:
                 workflow: dummy-create-server.yml
+                # workflow: create-hetzner-server.yml
                 args: -f environment=${{ inputs.release_version }}
                 token: ${{ secrets.GH_TOKEN }}
     provision-server:
@@ -70,6 +71,7 @@ jobs:
           - name: Run provision server 
             uses: ./.github/actions/run-workflow
             with:
+            #   workflow: provision.yml
               workflow: dummy-provision.yml
               args: -f environment=${{ inputs.release_version }}
               token: ${{ secrets.GH_TOKEN }}
