--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -33,6 +33,8 @@ jobs:
         runs-on: ubuntu-latest
         environment: ${{ inputs.release_version }}
         steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
             - name: Set defaults
               id: setvars
               run: |
